// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`action: a 1`] = `
<div>
  a
</div>
`;

exports[`action: b.a 1`] = `
<div>
  b.a
</div>
`;

exports[`action: b.b 1`] = `
<div>
  b.b
</div>
`;

exports[`channels: outer 1`] = `
<div>
  outer
  <div>
    inner
    outer
  </div>
</div>
`;

exports[`parallel: bold.off,underline.off,italics.off,list.bullets 1`] = `
<div>
  bold.off
  underline.off
  italics.off
  list.bullets
</div>
`;

exports[`parallel: bold.off,underline.off,italics.off,list.none 1`] = `
<div>
  bold.off
  underline.off
  italics.off
  list.none
</div>
`;

exports[`parallel: bold.off,underline.off,italics.off,list.numbers 1`] = `
<div>
  bold.off
  underline.off
  italics.off
  list.numbers
</div>
`;

exports[`parallel: bold.off,underline.off,italics.on,list.bullets 1`] = `
<div>
  bold.off
  underline.off
  italics.on
  list.bullets
</div>
`;

exports[`parallel: bold.off,underline.off,italics.on,list.none 1`] = `
<div>
  bold.off
  underline.off
  italics.on
  list.none
</div>
`;

exports[`parallel: bold.off,underline.off,italics.on,list.numbers 1`] = `
<div>
  bold.off
  underline.off
  italics.on
  list.numbers
</div>
`;

exports[`parallel: bold.off,underline.on,italics.off,list.bullets 1`] = `
<div>
  bold.off
  underline.on
  italics.off
  list.bullets
</div>
`;

exports[`parallel: bold.off,underline.on,italics.off,list.none 1`] = `
<div>
  bold.off
  underline.on
  italics.off
  list.none
</div>
`;

exports[`parallel: bold.off,underline.on,italics.off,list.numbers 1`] = `
<div>
  bold.off
  underline.on
  italics.off
  list.numbers
</div>
`;

exports[`parallel: bold.off,underline.on,italics.on,list.bullets 1`] = `
<div>
  bold.off
  underline.on
  italics.on
  list.bullets
</div>
`;

exports[`parallel: bold.off,underline.on,italics.on,list.none 1`] = `
<div>
  bold.off
  underline.on
  italics.on
  list.none
</div>
`;

exports[`parallel: bold.off,underline.on,italics.on,list.numbers 1`] = `
<div>
  bold.off
  underline.on
  italics.on
  list.numbers
</div>
`;

exports[`parallel: bold.on,underline.off,italics.off,list.bullets 1`] = `
<div>
  bold.on
  underline.off
  italics.off
  list.bullets
</div>
`;

exports[`parallel: bold.on,underline.off,italics.off,list.none 1`] = `
<div>
  bold.on
  underline.off
  italics.off
  list.none
</div>
`;

exports[`parallel: bold.on,underline.off,italics.off,list.numbers 1`] = `
<div>
  bold.on
  underline.off
  italics.off
  list.numbers
</div>
`;

exports[`parallel: bold.on,underline.off,italics.on,list.bullets 1`] = `
<div>
  bold.on
  underline.off
  italics.on
  list.bullets
</div>
`;

exports[`parallel: bold.on,underline.off,italics.on,list.none 1`] = `
<div>
  bold.on
  underline.off
  italics.on
  list.none
</div>
`;

exports[`parallel: bold.on,underline.off,italics.on,list.numbers 1`] = `
<div>
  bold.on
  underline.off
  italics.on
  list.numbers
</div>
`;

exports[`parallel: bold.on,underline.on,italics.off,list.bullets 1`] = `
<div>
  bold.on
  underline.on
  italics.off
  list.bullets
</div>
`;

exports[`parallel: bold.on,underline.on,italics.off,list.none 1`] = `
<div>
  bold.on
  underline.on
  italics.off
  list.none
</div>
`;

exports[`parallel: bold.on,underline.on,italics.off,list.numbers 1`] = `
<div>
  bold.on
  underline.on
  italics.off
  list.numbers
</div>
`;

exports[`parallel: bold.on,underline.on,italics.on,list.bullets 1`] = `
<div>
  bold.on
  underline.on
  italics.on
  list.bullets
</div>
`;

exports[`parallel: bold.on,underline.on,italics.on,list.none 1`] = `
<div>
  bold.on
  underline.on
  italics.on
  list.none
</div>
`;

exports[`parallel: bold.on,underline.on,italics.on,list.numbers 1`] = `
<div>
  bold.on
  underline.on
  italics.on
  list.numbers
</div>
`;

exports[`state: a 1`] = `
<div>
  a
</div>
`;

exports[`state: b.a 1`] = `
<div>
  b.a
</div>
`;

exports[`state: b.b 1`] = `
<div>
  b.b
</div>
`;
